# parchmint

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ROADMAP.md
docs/adr/: 0001-tauri-react-typescript-stack.md  0002-local-approximate-token-counting.md  0003-honest-preview-model.md  0004-tauri-plugin-store-for-persisted-settings.md  0005-external-change-reconciliation.md  0005-session-restore.md  0006-cross-platform-window-effects-and-file-open.md
scripts/: gen-third-party-notices.mjs  release.ps1  sync-version.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: default_handler.rs  lib.rs  main.rs
src/components/: AboutDialog.tsx  CommandPalette.tsx  ConflictBanner.tsx  ConflictCompare.tsx  DefaultEditorPrompt.tsx  Menu.tsx  PreviewPane.tsx  RecentsMenu.tsx  ShortcutsHelp.tsx  Sidebar.tsx  SourcePane.tsx  SplitPane.tsx  StatusBar.tsx  Tabs.tsx  softWrap.ts
src/lib/: api.ts  docType.test.ts  docType.ts  editFormat.test.ts  editFormat.ts  exporter.ts  frontmatter.test.ts  frontmatter.ts  fuzzy.test.ts  fuzzy.ts  htmlTags.ts  linkNav.test.ts  linkNav.ts  lint.test.ts  lint.ts  markdown.ts  outline.test.ts  outline.ts  preview.ts  recents.ts  shortcuts.ts  sidebarWidth.test.ts  (+9 more)
website/: CNAME  index.html  styles.css
