[package]
name = "parchmint"
version = "0.1.1"
description = "Parchmint — a Markdown editor for AI-consumed documents"
authors = ["Abu Mazher Uddin <mazher@gmail.com>"]
license = "MIT"
repository = "https://github.com/MazherUddin/parchmint"
homepage = "https://parchmint.app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "parchmint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-debouncer-mini = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

# Native window materials: Mica on Windows, vibrancy on macOS. Linux has no
# equivalent and stays opaque via CSS, so the crate is only pulled where used.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
window-vibrancy = "0.5"

